hphp/test/zend/good/ext/xsl/tests/bug33853.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded('xsl')) die('skip xsl not loaded');
}
