hphp/test/zend/bad/ext/standard/tests/streams/bug46024.php.skipif
<?php if (!getenv('TEST_PHP_EXECUTABLE')) die("skip TEST_PHP_EXECUTABLE not defined"); ?>